--- a/lectures/week_01/lec_01_class_overview.Rmd
+++ b/lectures/week_01/lec_01_class_overview.Rmd
@@ -383,5 +383,6 @@ Reference management
 |:--:|:---|:---|
 | [EndNote](https://endnote.com/downloads) | works with MS Word | not free |
 | [Zotero](https://www.zotero.org/download/) | works with MS Word; browser plug-in | can be hard to share |
-| [Mendeley](https://www.mendeley.com/download-reference-manager/) | works with MS Word | can be hard to share | [Paperpile](https://paperpile.com) | works with Google Docs | costs $2.99/month 
+| [Mendeley](https://www.mendeley.com/download-reference-manager/) | works with MS Word | can be hard to share | 
+| [Paperpile](https://paperpile.com) | works with Google Docs | costs $2.99/month |
 | [BibTeX](http://www.bibtex.org/) | works with LaTeX & Markdown | antiquated |
