--- a/lectures/week_02/lec_02_proposals_abstracts.Rmd
+++ b/lectures/week_02/lec_02_proposals_abstracts.Rmd
@@ -1,8 +1,8 @@
 ---
 title: "Elements of a scientific proposal"
 subtitle: "Proposal writing & professional development<br>FISH 521"
-author: "Mark Scheuerell"
-date: "22 January 2024"
+author: "Chelsea Wood"
+date: "13 January 2025"
 output:
   ioslides_presentation:
     css: lecture_slides.css
@@ -150,26 +150,11 @@ Outline *what* will happen & *when* it will happen
 
 * Gantt charts are a great way to show a timeline
 
-* Can use Excel or many R packages (eg, `{gantrify}`)
+* Can use Excel or many R packages (e.g., `{ganttrify}`)
 
 
-## Gantt chart
+## Gantt chart {data-background=ganttrify.png data-background-size=100% data-background-position="40% 55%"}
 
-```{r gantt}
-library("ganttrify")
-
-dat <- data.frame(wp = LETTERS[1:4],
-                  activity = c("Collect data", "Analyze data",
-                               "Outreach", "Write report"),
-                  start_date = c(1, 4, 7, 10),
-                  end_date = c(5, 7, 9, 12))
-ganttrify(project = dat,
-          hide_wp = TRUE,
-          size_text_relative = 1.2, 
-          mark_quarters = TRUE,
-          project_start_date = "2022-06",
-          font_family = "Roboto Condensed")
-```
 
 
 ## Body of proposal | Expected results & interpretation  
