clearing dates from syllabus text to prevent issues in future years

--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -143,7 +143,7 @@ This course will involve a *lot* of communication between and among students and
 
 Students will be evaluated on their knowledge of course content and their ability to communicate their understanding of the material via individual homework assignments. There will be 7 homework assignments, each with varying weight on your final grade. Please note, **all assignments must be turned in to achieve a passing grade**.
 
-Homework will be assigned each Monday and will be due by 1:30 PM the following Monday, with the exception of the final assignment, which will be due by 11:59 PM on March 17. Late homework will not be accepted. The instructor will evaluate and return student homework assignments within one week of their due date. **If for some reason you cannot meet the homework deadline, contact the instructor as soon as possible to discuss other options**. Please see the [Homework](homework.html) page for more details.
+Homework will be assigned each Monday and will be due by 1:30 PM the following Monday, with the exception of the final assignment. Late homework will not be accepted. The instructor will evaluate and return student homework assignments within one week of their due date. **If for some reason you cannot meet the homework deadline, contact the instructor as soon as possible to discuss other options**. Please see the [Homework](homework.html) page for more details.
 
 ### Participation
 
