adding ASLO video

--- a/references.Rmd
+++ b/references.Rmd
@@ -34,3 +34,5 @@ Sand-Jensen K. 2007. [How to write consistently boring scientific literature](re
 [Where do you do your best writing?](https://www.chronicle.com/article/where-do-you-do-your-best-writing) (Blog post)
 
 [What makes writing more readable?](https://pudding.cool/2022/02/plain/) (Blog post)
+
+[Writing tips from ASLO](https://www.youtube.com/watch?v=pIflO92Mlkc) (YouTube video)
