--- a/docs/homework/week_09/hw_07_presentations.Rmd
+++ b/docs/homework/week_09/hw_07_presentations.Rmd
@@ -63,7 +63,7 @@ Please note that due to our tight time frame in class, **you are required to upl
 
 ## Schedule
 
-Here is the schedule for the day. **Note that everyone has a total of 8 minutes for their presentation**. This includes Chelsea's introduction of you and any Q&A.
+Here is the schedule for the day. **Note that everyone has a total of 15 minutes for their presentation**. This includes 12 minutes to speak and 3 minutes of Q&A.
 
 ```{r schedule, echo = FALSE}
 library(magrittr)
@@ -72,21 +72,14 @@ set.seed(521)
 
 ## set class roster
 roster <- c(
-  "Avnoor",
-  "Bible",
-  "Casey",
-  "Chen",
-  "Christman",
-  "Commisso",
-  "Durkin",
-  "Dyroy",
-  "Ewing",
-  "Makhlouf",
-  "Patrone",
-  "Proefrock",
-  "Randrup",
-  "Triviño",
-  "Whalen"
+  "Breitkreutz",
+  "Brenner",
+  "Cook",
+  "de Barros",
+  "Morningstar Dillon",
+  "Quiroz",
+  "Rothman",
+  "Singleton"
 )
 
 ## order of presentations
@@ -97,15 +90,15 @@ items <- c("**[ Introduction ]**", p_order[1:5], "**[ Break ]**",
            p_order[6:10], "**[ Break ]**", p_order[11:15], "**[ Wrap-up ]**")
 
 ## date of presentations
-start_date <- as.POSIXct("2024-03-04 13:30")
+start_date <- as.POSIXct("2025-03-03 13:30")
 ## dates in seconds past `start_date`
 dates_sec <- c(0, 48, 96, 97, 98) * 3600
 ## presentation & break times in seconds past the hour
-p_times_1 <- seq(5, by = 8, length.out = 5)
+p_times_1 <- seq(5, by = 15, length.out = 5)
 break_1 <- 45
-p_times_2 <- seq(55, by = 8, length.out = 5)
+p_times_2 <- seq(55, by = 15, length.out = 5)
 break_2 <- 95
-p_times_3 <- seq(105, by = 8, length.out = 6)
+p_times_3 <- seq(105, by = 15, length.out = 6)
 times <- c(0, p_times_1, break_1, p_times_2, break_2, p_times_3) * 60
 ## formal times
 date_times <- start_date + times
