--- a/references.Rmd
+++ b/references.Rmd
@@ -11,6 +11,12 @@ Students are not required to purchase any materials for the course, as we will r
 
 <br>
 
+## YouTube channels
+
+[Life in academia](https://www.youtube.com/@mrillig) - Matthias Rillig gives advice on being a graduate student, running a lab, and everything in between
+
+<br>
+
 ## Books
 
 Heard SB. 2016. [*The Scientist’s Guide to Writing*](https://scientistseessquirrel.wordpress.com/the-scientists-guide-to-writing/). Princeton University Press.
