adding natalie and karl

--- a/references.Rmd
+++ b/references.Rmd
@@ -30,6 +30,8 @@ Students are not required to purchase any materials for the course, as we will r
 
 [Rachelle Johnson, Olden Lab](references/example_proposals/johnson_rachelle.pdf) - Bioenergetics-based food web assessment of factors limiting production of native salmonids in Upper Skagit River reservoirs
 
+[Natalie Mastick, Wood Lab](references/example_proposals/mastick_natalie.pdf) - Long-term change in the burden of anisakid nematode parasites for marine mammal hosts
+
 [Helena McMonagle, Essington and Hilborn Labs](references/example_proposals/mcmonagle_helena.pdf) - Quantifying and sustaining ecosystem services of mesopelagic fishes
 
 
