--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Research Proposal Writing and Professional Development for Graduate Students"
-subtitle: "FISH 521 &nbsp; &nbsp; University of Washington &nbsp; &nbsp; Winter 2025"
+title: "Parasite Ecology"
+subtitle: "FISH 406 &nbsp; &nbsp; University of Washington &nbsp; &nbsp; Fall 2025"
 output: html_document
 ---
 
@@ -29,7 +29,7 @@ h3 {
 
 <br>
 
-<center>&copy; Mark Scheuerell 2024, updated by Chelsea Wood 2025</center>
+<center>&copy; Chelsea Wood 2025</center>
 
 <br>
 
